# Geppetto

./: .gitignore  AGENTS.md  README.md  environment-dev.lock.txt  environment-dev.yml  install_mpi4py_leonardo.sh  pyproject.toml  submit.sh  submit_theory.sh
docs/: angular_power_validation.md  architecture.md
examples/: nfw_box.py  nfw_healpix_particle_count.py  nfw_lightcone.py  paint_halo_particles_for_pinocchio_segment.py  plot_angular_power_validation.py  validate_pinocchio_angular_power.py
examples/pinocchio_geppetto_case/: README.md  geppetto.example.one_halo_counts.nside256.seg000.summary.json  painted_nfw_manifest.csv  parameter_file  pinocchio.0.0000.example.mf.out  pinocchio.0.0500.example.mf.out  pinocchio.0.1000.example.mf.out  pinocchio.example.FmaxPDF.out  pinocchio.example.cosmology.out  pinocchio.example.geometry.out  pinocchio.example.nz.out  pinocchio.example.plc.slice32.out  pinocchio.example.sheets.out  rebuild_geppetto_map.py
logs/: geppetto_48831974.err  geppetto_48831974.out  geppetto_48832659.out  geppetto_49347761.out  geppetto_49349073.out  geppetto_49350531.out  geppetto_49356897.out  geppetto_49356907.out  geppetto_49403956.out
scripts/: validate_pinocchio_reader_matrix.py
src/geppetto/: __init__.py  _sparse_jit.py  baryonification.py  catalog.py  concentration.py  cosmology.py  geometry.py  io.py  painters.py  profiles.py  (+2 more)
tests/: test_angular_power_example.py  test_io.py  test_painters.py  test_pinocchio_reader_matrix.py  test_pinocchio_segment_example.py  test_plot_angular_power_example.py  test_profiles.py  test_theory.py
